# acoustic-drone-detection-Team-110

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml
data/processed/: ambience_000000.pt  ambience_000001.pt  ambience_000002.pt  ambience_000003.pt  ambience_000004.pt  ambience_000005.pt  ambience_000006.pt  ambience_000007.pt  ambience_000008.pt  ambience_000009.pt  ambience_000010.pt  ambience_000011.pt  ambience_000012.pt  ambience_000013.pt  ambience_000014.pt  ambience_000015.pt  ambience_000016.pt  ambience_000017.pt  ambience_000018.pt  ambience_000019.pt  ambience_000020.pt  ambience_000021.pt  ambience_000022.pt  ambience_000023.pt  ambience_000024.pt  ambience_000025.pt  ambience_000026.pt  ambience_000027.pt  ambience_000028.pt  ambience_000029.pt  ambience_000030.pt  ambience_000031.pt  ambience_000032.pt  ambience_000033.pt  ambience_000034.pt  ambience_000035.pt  ambience_000036.pt  ambience_000037.pt  ambience_000038.pt  ambience_000039.pt  (+7935 more)
src/: config.py
src/aerosonar/: config.py
src/aerosonar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aerosonar/app/: app.py
src/aerosonar/config/: default.yaml
src/aerosonar/data/: dataset.py  preprocessData.py
src/aerosonar/features/: transforms.py
src/aerosonar/models/: spectrogramCNN.py
src/aerosonar/training/: trainCNN.py  trainSVM.py
src/data/: preprocessData.py
src/features/: transforms.py
src/models/: spectrogramCNN.py
src/training/: trainSVM.py
